# cdn-optimization

./: .gitignore  AGENTS.md  README.md  analyzable_paths_all.json  pyproject.toml
config/: default_config.yaml
docs/: core_and_topology.md  data_access_fds_loader.md  data_access_sqlite.md  models_footprint.md  models_latency_path.md  models_probability.md  refactoring_report.md
docs/theory/: mathematical_formulation.md  perf_model_and_fd.md  terms_and_examples.md
scripts/: analyze_pairwise_hitrate_heatmaps.py  analyze_pairwise_paths.py  discover_analyzable_paths.py
src/cdn_optimizer/core/: config_loader.py  exceptions.py
src/cdn_optimizer/data_access/: csv_parser.py  fds_loader.py  sqlite_client.py
src/cdn_optimizer/models/: footprint.py  latency_path.py  probability.py
src/cdn_optimizer/topology/: network_map.py
